# raytiles-flight

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  PLAYING.md  README.md  SECURITY.md  cr.md  craytiles.h  docs.md  fly.command  license  planing.md  raytiles.h  readme.md  release-please-config.json  terrain.fs  terrain.vs
.github/: FUNDING.yml
.github/workflows/: emscripten.yml  linux.yml  macos.yml  release-please.yml  windows-release.yml  windows.yml
include/: craytiles.h  raytiles.h
include/raytiles/: craytiles.h  raytiles.h
include/raytiles/detail/: tile.hpp  utils.hpp
providers/: mapbox.hpp  providers.hpp
res/: planing.md  readme.md
res/x-wing/: license.txt  scene.gltf
sandbox/: advanced-fly.hpp  base_line.cpp  demo.cpp  demo_c.c  fly.h  main.cpp  main.ecmascripten.cpp  quick_start.cpp  race.hpp  spline.cpp
scripts/: tiles-cache-config.json  tiles-cache.mjs
src/: config.cpp  craytiles.cpp  downloader.cpp  downloader.hpp  manager.hpp  raii.hpp  raytiles.cpp  renderer.cpp  shaders.hpp  tile.hpp  tile_shader.cpp  tilekey.hpp  tiles_manager.cpp  tiles_renderer.cpp  utils.hpp
src/detail/: downloader.h  renderer.h  tile.hpp  tile_shader.h  tiles_manager.h  tiles_renderer.h  utils.hpp
tests/: example_tests.cpp
